# mathtex

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
crates/mathtex/: Cargo.toml
crates/mathtex-engine/: Cargo.toml
crates/mathtex-engine/src/: emit.rs  format.rs  generated.rs  lib.rs  platform.rs  primitive.rs  profile.rs  resource.rs  resource_font.rs  session.rs  texmf.rs
crates/mathtex-engine/tests/: conformance.rs  conformance_xetex_native.rs  profile_modes.rs  source_tracking.rs  unicode_math_boot.rs
crates/mathtex-font/: Cargo.toml
crates/mathtex-font/src/: lib.rs
crates/mathtex-ir/: Cargo.toml
crates/mathtex-ir/src/: lib.rs
crates/mathtex-render/: Cargo.toml
crates/mathtex-render/src/: lib.rs
crates/mathtex-svg/: Cargo.toml
crates/mathtex-svg-cli/: Cargo.toml
crates/mathtex-svg-cli/src/: main.rs
crates/mathtex-svg/src/: lib.rs
crates/mathtex-wasm/: Cargo.toml
crates/mathtex-wasm/src/: lib.rs
crates/mathtex/src/: lib.rs
test/: e2e.mjs
tools/: audit-translated-bootstrap.sh  bootstrap-texlive-web2c-c2rust.sh  generate_third_party_licenses.py  patch-translated-engine.sh
tools/bench/: .gitignore  bench.mjs  corpus_accents.txt  corpus_adversarial.txt  corpus_bigops-limits.txt  corpus_delimiters.txt  corpus_macro-args.txt  corpus_nested-macros.txt  corpus_real-world.txt  corpus_scripts.txt  corpus_symbol-macros.txt  corpus_text-mode.txt  corpus_typed-basic.txt  package.json  sess.mjs
tools/build-format/: dump.mjs
tools/web2c-import/: Cargo.toml
tools/web2c-import/changes/: src-tracking.ch
tools/web2c-import/examples/: semantic_diff.rs
tools/web2c-import/runtime/: prelude.rs.in
tools/web2c-import/src/: astpass.rs  boundary.rs  codegen.rs  compare.rs  extract.rs  flow.rs  lib.rs  model.rs  orchestrate.rs  profile.rs  select.rs  synpass.rs  transform.rs
web/: _headers  app.js  editor.js  index.html
