[package]
name = "mathtex-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Render traits for consuming mathtex layout IR"

[features]
default = ["std"]
std = ["mathtex-ir/std"]

[dependencies]
mathtex-ir = { version = "0.1.0", path = "../mathtex-ir", default-features = false }

[lints]
workspace = true
