[package]
name = "mathtex-svg-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "mathtex-svg-cli"
path = "src/main.rs"

[dependencies]
mathtex-engine = { path = "../mathtex-engine" }
mathtex-svg = { path = "../mathtex-svg" }
mathtex-render = { path = "../mathtex-render" }
mathtex-font = { path = "../mathtex-font" }
mathtex-ir = { path = "../mathtex-ir" }

[lints]
workspace = true
