[package]
name = "mathtex-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "wasm-bindgen entry points: build a packaged TeX format and render math fragments to SVG in the browser/Node."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mathtex-engine = { path = "../mathtex-engine" }
mathtex-svg = { path = "../mathtex-svg" }
mathtex-render = { path = "../mathtex-render" }
mathtex-ir = { path = "../mathtex-ir" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[lints]
workspace = true
