[package]
name = "mathtex"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TeX math layout engine in Rust: LaTeX math to renderer neutral IR to SVG, natively and on wasm"

[features]
default = ["std"]
std = [
    "mathtex-engine/std",
    "mathtex-ir/std",
    "mathtex-font/std",
    "mathtex-render/std",
    "mathtex-svg/std",
]

[dependencies]
mathtex-engine = { version = "0.1.0", path = "../mathtex-engine", default-features = false }
mathtex-font = { version = "0.1.0", path = "../mathtex-font", default-features = false }
mathtex-ir = { version = "0.1.0", path = "../mathtex-ir", default-features = false }
mathtex-render = { version = "0.1.0", path = "../mathtex-render", default-features = false }
mathtex-svg = { version = "0.1.0", path = "../mathtex-svg", default-features = false }

[lints]
workspace = true
